--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+trac-mastertickets (3.0.4-0.1~aroth~ppa1) wily; urgency=medium
+
+  * update to version 3.0.4
+
+ -- Andreas Roth <aroth@arsoft-online.com>  Sun, 25 Oct 2015 15:07:36 +0100
+
 trac-mastertickets (3.0.2+fixes20120130.af6c1df926-0~aroth~ppa2) trusty; urgency=medium
 
   * rebuild for active distros
